--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./",
     "paths": {
+      "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"],
       "@/*": ["./*"]
     }
   },
